--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.4"
-          extensions: zip, fileinfo, pdo, pdo_sqlite, mbstring, xml
+          extensions: zip, fileinfo, pdo, pdo_sqlite, mbstring, xml, curl, json, tokenizer, pcntl, posix
 
       - name: Cache Composer packages
         uses: actions/cache@v3
