chore: add support to extract audios from video and chunk size function for big files

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Bruno",
-            "email": "b7s@outlook.com"
+            "email": "me@brunots.dev"
         }
     ],
     "require": {
