chore: I added minimum size validation per model to detect incomplete downloads. It checks if the video card supports AI processing (if not, it compiles to process via CPU); new example for video

--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
             "echo '📊 Check installation status:'",
             "echo '   vendor/bin/whisper-status'",
             "echo ''",
-            "echo '📖 Documentation: https://github.com/b7s/laravelwhisper'",
+            "echo '📖 Documentation: https://github.com/b7s/whisper-php'",
             "echo ''"
         ]
     },
